--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -51,6 +51,23 @@ $firmColorVK: #4a76a8;;
     }
   }
 
+  .gallery {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    padding-bottom: 40px;
+    .pix {
+      img {
+
+      }
+    }
+  }
+
   footer {
     position: fixed;
     bottom: 0;
