--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -10,7 +10,25 @@ $firmColorVK: #4a76a8;;
   flex-direction: column;
   width: 100%;
   height: 100%;
+  .gallery {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    padding-bottom: 40px;
+    .pix {
+      img {
+
+      }
+    }
+  }
+
   .auth-wrapper {
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,10 +36,13 @@ $firmColorVK: #4a76a8;;
     padding: 100px 0;
     h1.title {
       width: 100%;
-      margin: 0;
-      padding: 40px 0;
+      margin: 30px 0;
+      padding: 10px 20px;
+      border-radius: 5px;
       font: 400 62px/64px $fontMain;
       text-align: center;
+      background-color: #31456A;
+      color: #FFFFFFFF;
     }
     .button {
       display: flex;
@@ -47,23 +68,6 @@ $firmColorVK: #4a76a8;;
         font: 14px/16px $fontMain;
         text-align: center;
         color: rgba(255, 255, 255, 0.88);
-      }
-    }
-  }
-
-  .gallery {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    padding-bottom: 40px;
-    .pix {
-      img {
-
       }
     }
   }
