--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -37,11 +37,11 @@ $firmColorVK: #4a76a8;;
     h1.title {
       width: 100%;
       margin: 30px 0;
-      padding: 10px 20px;
-      border-radius: 5px;
+      padding: 5px 0;
+      border-radius: 50px;
       font: 400 62px/64px $fontMain;
       text-align: center;
-      background-color: #31456A;
+      background-color: rgba(49,69,105,.8);
       color: #FFFFFFFF;
     }
     .button {
@@ -49,6 +49,7 @@ $firmColorVK: #4a76a8;;
       flex-direction: row;
       justify-content: center;
       align-items: center;
+      height: 44px;
       padding: 8px 20px;
       background: $firmColorVK;
       border: none;
