--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -22,14 +22,15 @@ $firmColorVK: #4a76a8;
     left: 0;
     padding-bottom: 40px;
     .pix {
+      width: 100%;
+      height: 100%;
       img {
-
       }
     }
   }
 
   .auth-wrapper {
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
