--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -25,6 +25,9 @@ $firmColorVK: #4a76a8;
       width: 100%;
       height: 100%;
       img {
+        object-fit: cover;
+        width: 25%;
+        height: 50%;
       }
     }
   }
