--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -197,19 +197,19 @@ $white: rgba(255, 255, 255, 0.88);
           width: 100%;
           height: 100%;
           &.github {
-            background: url("img/github.svg") no-repeat;
+            background: url("../../images/github.svg") no-repeat;
             background-size: cover;
           }
           &.telega {
-            background: url("img/telega.svg") no-repeat;
+            background: url("../../images/telega.svg") no-repeat;
             background-size: cover;
           }
           &.vk {
-            background: url("img/vk.svg") no-repeat;
+            background: url("../../images/vk.svg") no-repeat;
             background-size: cover;
           }
           &.instagram {
-            background: url("img/instagram.svg") no-repeat;
+            background: url("../../images/instagram.svg") no-repeat;
             background-size: cover;
           }
         }
