--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -22,5 +22,11 @@ body {
 }
 
 #root {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
   height: 100%;
 }
