--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -48,6 +48,11 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
     color: $dark;
     border: 4px solid $dark;
   }
+  .description {
+    margin: 0 auto;
+    font: 400 42px/44px $fontMain;
+    color: $dark;
+  }
   form {
     .title {
       margin-bottom: 10px;
