--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -1,7 +1,7 @@
 $fontMain: 'Roboto', sans-serif;
-$background: #252525;
+$background: #4D4D4D;
 $light: #949494;
-$dark: #4D4D4D;
+$dark: #252525;
 $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3DC9 41.15%, #FFEA29 85.42%);
 
 .gallery {
@@ -39,19 +39,19 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
   h1.title {
     opacity: .9;
     margin: 0 auto;
-    width: 340px;
+    width: 360px;
     padding: 5px 0;
     border-radius: 50px;
     font: 400 42px/44px $fontMain;
     text-align: center;
     background: $gradient;
-    color: $dark;
-    border: 4px solid $dark;
+    color: $background;
+    border: 4px solid $background;
   }
   .description {
     margin: 0 auto;
     font: 400 42px/44px $fontMain;
-    color: $dark;
+    color: $background;
   }
   form {
     .title {
@@ -60,7 +60,7 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
         display: block;
         font: 500 16px/20px $fontMain;
         text-align: center;
-        color: $light;
+        color: $background;
         &.albumSize {
           display: inline-block;
           font-weight: 900;
@@ -77,13 +77,13 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
         width: 80px;
         height: 32px;
         padding: 8px 0;
-        background: $dark;
+        background: $background;
         border: none;
         outline: none;
         border-radius: 25px;
         font: 900 16px/18px $fontMain;
         text-align: center;
-        color: $light;
+        color: $dark;
         &:read-only {
           background: lighten($dark, 10%)
         }
@@ -106,7 +106,7 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
           padding-left: 34px;
           height: 32px;
           font: 500 16px/32px $fontMain;
-          color: $dark;
+          color: $background;
         }
         label::before,
         label::after {
@@ -121,7 +121,7 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
           left: 0;
           top: 0;
           border-radius: 16px;
-          border: 2px solid $dark;
+          border: 2px solid $background;
         }
         label::after {
           transition: transform .2s ease-in-out;
@@ -132,7 +132,7 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
           top: 50%;
           margin-top: -8px;
           border-radius: 8px;
-          background: $light;
+          background: $background;
         }
 
         input[type="checkbox"] + label::after {
@@ -154,7 +154,7 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
     height: 44px;
     margin: 0 auto;
     padding: 8px 20px;
-    background: $dark;
+    background: $background;
     outline: none;
     border-radius: 25px;
     cursor: pointer;
@@ -165,13 +165,17 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
     }
     .logo-vk {
       margin-left: 10px;
-      margin-top: 5px;
-      svg {}
+      width: 34px;
+      height: 19px;
+      background-color: $dark;
+      mask-image: url("../../images/vk-login.svg");
+      mask-size: cover;
+      -webkit-mask-size: cover;
     }
     .label {
       font: 500 16px/18px $fontMain;
       text-align: center;
-      color: $light;
+      color: $dark;
     }
   }
 }
@@ -181,7 +185,7 @@ footer {
   bottom: 0;
   height: 40px;
   width: 100%;
-  background: $dark;
+  background: $background;
   opacity: .9;
   .social {
     height: 100%;
@@ -199,24 +203,28 @@ footer {
         width: 100%;
         height: 100%;
         &.github {
-          background-color: $background;
+          background-color: $dark;
           mask-image: url("../../images/github.svg");
           mask-size: cover;
+          -webkit-mask-size: cover;
         }
         &.telega {
-          background-color: $background;
+          background-color: $dark;
           mask-image: url("../../images/telega.svg");
           mask-size: cover;
+          -webkit-mask-size: cover;
         }
         &.vk {
-          background-color: $background;
+          background-color: $dark;
           mask-image: url("../../images/vk.svg");
           mask-size: cover;
+          -webkit-mask-size: cover;
         }
         &.instagram {
-          background-color: $background;
+          background-color: $dark;
           mask-image: url("../../images/instagram.svg");
           mask-size: cover;
+          -webkit-mask-size: cover;
         }
       }
       &:last-child {
