--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,8 +11,8 @@ html {
 body {
   height: 100%;
   margin: 0;
-  //background: linear-gradient(180deg, #F1F5F8 0%, #EBF3FA 0.01%, #DDE7F3 53.92%, #E6F0F9 100%);
   background: #252525;
+  //background: linear-gradient(200.44deg, #4C4C4C 9.18%, #616161 80.34%);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
