API photos.js test range downloads, CLIENT add logo, layout reworks etc

--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -36,6 +36,7 @@ header {
   top: 0;
   height: 60px;
   width: 100%;
+  background: $dark;
   .player , .profile, .settings  {
     cursor: pointer;
     width: auto;
