--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -13,16 +13,17 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
   height: 100%;
   top: 0;
   left: 0;
-  padding-bottom: 40px;
-  .pix {
+  padding-top: 60px;
+  .pixies {
     width: 100%;
     height: 100%;
     img {
-      object-fit: contain;
+      background-size: cover;
+      object-fit: cover;
       padding: 10px;
-      width: 25%;
-      height: 50%;
-
+      width: 10%;
+      height: 20%;
+      border-radius: 20px;
     }
   }
 }
@@ -34,17 +35,17 @@ header {
   justify-content: space-between;
   align-items: center;
   top: 0;
-  height: 60px;
+  height: 40px;
   width: 100%;
   background: $dark;
+  padding: 10px 0;
   .player , .profile, .settings  {
     cursor: pointer;
     width: auto;
     height: 100%;
     padding: 0 20px;
-    font-size: 26px;
-    text-align: center;
-    line-height: 60px;
+    font-size: 20px;
+    line-height: 20px;
     font-family: "Noto Color Emoji", "Apple Color Emoji", "Segoe UI Emoji",
     Times, Symbola, Aegyptus, Code2000, Code2001, Code2002, Musica, serif, LastResort;
   }
@@ -59,7 +60,8 @@ header {
       margin-right: 10px;
     }
     .user-name {
-      font: 600 16px/60px $fontMain;
+      cursor: auto;
+      font: 600 16px/20px $fontMain;
       color: $background;
     }
   }
@@ -69,7 +71,7 @@ header {
       margin-right: 10px;
     }
     .label {
-      font: 600 16px/60px $fontMain;
+      font: 600 16px/20px $fontMain;
       color: $background;
     }
   }
