API photos.js test range downloads, CLIENT add logo, layout reworks etc

--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -297,6 +297,10 @@ header {
       text-align: center;
       color: $dark;
     }
+    &.down {
+      position: absolute;
+      bottom: 20px;
+    }
   }
 }
 
