--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -21,7 +21,7 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
       background-size: cover;
       object-fit: cover;
       padding: 10px;
-      width: 10%;
+      width: 25%;
       height: 20%;
       border-radius: 20px;
     }
@@ -278,7 +278,6 @@ header {
     cursor: pointer;
     text-decoration: none;
     transition: background 200ms ease-in-out;
-
     box-shadow: -12px -20px 56px rgba(232, 237, 243, 0.05), 36px 12px 64px #4B4B4B, inset -16px -6px 80px rgba(248, 249, 249, 0.03);
     &:hover {
       background: lighten($dark, 10%);
@@ -298,6 +297,10 @@ header {
       color: $dark;
     }
     &.down {
+      position: absolute;
+      bottom: 20px;
+    }
+    &.bottomed {
       position: absolute;
       bottom: 20px;
     }
