API photos.js test range downloads, CLIENT add logo, layout reworks etc

--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -20,7 +20,7 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
     img {
       background-size: cover;
       object-fit: cover;
-      padding: 10px;
+      padding: 2px 5px;
       width: 25%;
       height: 20%;
       border-radius: 20px;
