API photos.js test range downloads, CLIENT add logo, layout reworks etc

--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -37,7 +37,7 @@ header {
   top: 0;
   height: 40px;
   width: 100%;
-  background: $dark;
+  background: #252525e8;
   padding: 10px 0;
   .player , .profile, .settings  {
     cursor: pointer;
