--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -15,15 +15,16 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
   left: 0;
   padding-top: 60px;
   .pixies {
-    width: 100%;
-    height: 100%;
+    margin: 2px 5px;
+    width: 25%;
+    height: 20%;
+    border-radius: 20px;
+    overflow: hidden;
     img {
+      width: 100%;
+      height: 100%;
       background-size: cover;
       object-fit: cover;
-      padding: 2px 5px;
-      width: 25%;
-      height: 20%;
-      border-radius: 20px;
     }
   }
 }
