--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -6,25 +6,29 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
 
 .gallery {
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   padding-top: 60px;
   .pixies {
-    margin: 2px 5px;
-    width: 25%;
-    height: 20%;
-    border-radius: 20px;
-    overflow: hidden;
-    img {
-      width: 100%;
-      height: 100%;
-      background-size: cover;
-      object-fit: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    .pix {
+      margin: 2px 5px;
+      width: 25%;
+      height: 20%;
+      border-radius: 20px;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        object-fit: cover;
+      }
     }
   }
 }
