--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -15,20 +15,50 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    .pix {
-      margin: 2px 5px;
+    flex-wrap: wrap;
+    .container  {
+      padding: 2px 5px;
       width: 25%;
       height: 20%;
+    }
+    .pix {
+      cursor: pointer;
+      width: 100%;
+      height: 100%;
       border-radius: 20px;
       overflow: hidden;
       img {
+        cursor: pointer;
         width: 100%;
         height: 100%;
         background-size: cover;
         object-fit: cover;
       }
+    }
+  }
+}
+
+.fullScreen {
+  z-index: 20;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  .pix {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      object-fit: cover;
     }
   }
 }
