--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -31,7 +31,6 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
         cursor: pointer;
         width: 100%;
         height: 100%;
-        background-size: cover;
         object-fit: cover;
       }
     }
@@ -48,7 +47,8 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 40px;
+  padding: 18px;
+  background: #252525;
   .pix {
     width: 100%;
     height: 100%;
@@ -57,8 +57,21 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
     img {
       width: 100%;
       height: 100%;
-      background-size: cover;
-      object-fit: cover;
+      object-fit: scale-down;
+      object-position: 50%;
+    }
+    .close {
+      position: absolute;
+      top: 40px;
+      right: 40px;
+      width: 20px;
+      height: 20px;
+      border-radius: 20px;
+      background: $background;
+      cursor: pointer;
+      font: 500 16px/18px $fontMain;
+      text-align: center;
+      color: $dark;
     }
   }
 }
