--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -16,22 +16,23 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    .container  {
-      padding: 2px 5px;
-      width: 25%;
-      height: 20%;
-    }
     .pix {
       cursor: pointer;
       width: 100%;
       height: 100%;
       border-radius: 20px;
       overflow: hidden;
-      img {
-        cursor: pointer;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+      .container  {
+        padding: 2px 5px;
+        width: 25%;
+        height: 20%;
+        .pix-img {
+          cursor: pointer;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+        .pix-selector {}
       }
     }
   }
