--- a/client/src/components/app/app.scss
+++ b/client/src/components/app/app.scss
@@ -18,14 +18,14 @@ $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3
     flex-wrap: wrap;
     .pix {
       cursor: pointer;
-      width: 100%;
-      height: 100%;
-      border-radius: 20px;
-      overflow: hidden;
-      .container  {
-        padding: 2px 5px;
-        width: 25%;
-        height: 20%;
+      width: 25%;
+      height: 20%;
+      padding: 2px 5px;
+      .pix-container  {
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        overflow: hidden;
         .pix-img {
           cursor: pointer;
           width: 100%;
